@@ -1,3 +1,24 @@
+;
+; Real-time serial display for controller test
+;
+; Copyright 2016 Damian Yerrick
+;
+; This software is provided 'as-is', without any express or implied
+; warranty.  In no event will the authors be held liable for any damages
+; arising from the use of this software.
+; 
+; Permission is granted to anyone to use this software for any purpose,
+; including commercial applications, and to alter it and redistribute it
+; freely, subject to the following restrictions:
+; 
+; 1. The origin of this software must not be misrepresented; you must not
+;    claim that you wrote the original software. If you use this software
+;    in a product, an acknowledgment in the product documentation would be
+;    appreciated but is not required.
+; 2. Altered source versions must be plainly marked as such, and must not be
+;    misrepresented as being the original software.
+; 3. This notice may not be removed or altered from any source distribution.
+;
 .include "nes.inc"
 .include "global.inc"
 
@@ -34,7 +55,6 @@ NUM_SPEEDS = 3
   ; TODO: Display speed names and speedmasks
 
 forever:
-  jsr adjust_speed
 
   ; At fast speed, skip polling only if the "1P D0 Fast" line
   ; needs 
@@ -47,9 +67,13 @@ forever:
   and nmis
   bne not_poll
   yes_poll:
+    lda #1
+    sta $4016
     ldx cur_bit
-    lda one_shl_x,x
     ldy cur_port
+    lsr a
+    sta $4016
+    lda one_shl_x,x
     ldx #4
     jsr read_serial_bytes
     jsr prepare_serial_report
@@ -60,16 +84,105 @@ forever:
     sta speed_dirty
   display_complete:
 
+  ; To minimize the unavoidable problem of the Super NES Mouse and
+  ; Arkanoid Controller not tolerating rereads very well,
+  ; reread the controller and adjust speed after reading the report.
+  jsr adjust_speed
   jsr present
   jmp forever
 .endproc
 
+REPORT_NTADDR = NTXY(9, 6)
+
 .proc prepare_serial_report
+dstlo = $02
+dsthi = $03
+chars = $04
+bytebits = $08
+byteindex = $09
+
+  lda #0
+  sta byteindex
+  lda #<REPORT_NTADDR
+  sta dstlo
+  lda #>REPORT_NTADDR
+  sta dsthi
+  jsr do_one_line
+  lda #<REPORT_NTADDR + 64
+  sta dstlo
+do_one_line:
+  jsr do_one_byte
+do_one_byte:
+  ldy byteindex
+  inc byteindex
+  lda padtestdata,y
+  sta bytebits
+  jsr do_one_nibble
+do_one_nibble:
+  ldx #0
+  bitloop:
+    asl bytebits
+    lda #'0' >> 1
+    rol a
+    sta chars,x
+    inx
+    cpx #4
+    bcc bitloop
+  jsr copydigits_add_4chars
+  lda #5
+  clc
+  adc dstlo
+  sta dstlo
   rts
 .endproc
 
+PORT_NTADDR = NTXY(2, 5)
+BIT_NTADDR = NTXY(5, 5)
+SPEED_NTADDR = NTXY(8, 5)
+
 .proc prepare_speed_line
-  rts
+dstlo = $02
+dsthi = $03
+chars = $04
+  lda #' '
+  sta chars+2
+  sta chars+3
+  lda #<PORT_NTADDR
+  sta dstlo
+  lda #>PORT_NTADDR
+  sta dsthi
+  clc
+  lda cur_port
+  adc #'1'
+  sta chars+0
+  lda #'P'
+  sta chars+1
+  jsr copydigits_add_4chars
+
+  lda #<BIT_NTADDR
+  sta dstlo
+  lda #'D'
+  sta chars+0
+  lda cur_bit
+  ora #'0'
+  sta chars+1
+  jsr copydigits_add_4chars
+
+  lda cur_speed
+  asl a
+  asl a
+  ora #3
+  tay
+  ldx #3
+  :
+    lda speed_names,y
+    sta chars,x
+    dey
+    dex
+    bpl :-
+  lda #<SPEED_NTADDR
+  sta dstlo
+  jmp copydigits_add_4chars
 .endproc
 
 .proc adjust_speed
@@ -88,7 +201,7 @@ forever:
   not_change_speed:
 
   lsr a
-  bne not_right
+  bcc not_right
     lda #1
     sta cur_port
     inc speed_dirty
@@ -96,7 +209,7 @@ forever:
   not_right:
 
   lsr a
-  bne not_left
+  bcc not_left
     lda #0
     sta cur_port
     inc speed_dirty
@@ -104,13 +217,13 @@ forever:
   not_left:
 
   lsr a
-  bne not_down
+  bcc not_down
     lda #7
     bne add_bit_number
   not_down:
 
   lsr a
-  bne not_up
+  bcc not_up
     lda #1
   add_bit_number:
     clc
